--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,7 @@
 {
   "projects": {
-    "default": "react-test-340b1"
-  }
+    "default": "react-test-340b1",
+    "staging": "foodistaan-fa10d"
+  },
+  "targets": {}
 }
